[package]
name = "js-everscale-encrypt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
chacha20poly1305 = "0.9.1"
getrandom = { version = "0.2", features = ["js"] }
everscale-crypto = "*"
rand = "*"
hex = "*"

[profile.dev.package."*"]
opt-level = "z"